messing with the ssh key

--- a/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/03-Stu-HTML-display/starter/assets/css/style.css
+++ b/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/03-Stu-HTML-display/starter/assets/css/style.css
@@ -15,10 +15,12 @@ ul {
 li {
   list-style-type: none;
   font-size: 40px;
+  display: inline;
 }
 
 img {
   margin: 0 auto;
+  display:block;
 }
 
 #item-1 {
