--- a/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/05-Stu-CSS-box-model/starter/assets/css/style.css
+++ b/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/05-Stu-CSS-box-model/starter/assets/css/style.css
@@ -3,10 +3,14 @@ section {
   height: 600px;
   text-align: center;
   border: 15px solid black;
+  margin: 0 auto;
 }
 
 img {
   width: 200px;
   height: 200px;
   background-color: lightblue;
+  maring
+  
+  
 }
